k8s-manifests/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: homework-netpol
  namespace: homework
spec:
  podSelector: {} # Применяется ко всем Pod в namespace homework
  policyTypes:
  - Ingress
  - Egress
  ingress:
  # Разрешаю Ingress Controller (из namespace ingress-nginx) обращаться к frontend (80) и backend (8080)
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: ingress-nginx
    ports:
    - protocol: TCP
      port: 80
    - protocol: TCP
      port: 8080
  
  # Разрешаю Frontend обращаться к Backend (внутренняя связь)
  - from:
    - podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 8080

  # Разрешаю Backend обращаться к PostgreSQL
  - from:
    - podSelector:
        matchLabels:
          app: backend
    ports:
    - protocol: TCP
      port: 5432

  # Разрешаю PostgreSQL подам общаются друг с другом (Репликация и Failsafe)
  - from:
    - podSelector:
        matchLabels:
          cnpg.io/cluster: postgres-ha
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 8000

 #Разрешаю оператору CloudNativePG (из ns cnpg-system) управлять кластером
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: cnpg-system
    ports:
    - protocol: TCP
      port: 8000

  egress:
  # Разрешаю всем подам ходить в DNS (CoreDNS)
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53

  # Разрешаю Backend инициировать соединение с PostgreSQL
  - to:
    - podSelector:
        matchLabels:
          app: postgres
    ports:
    - protocol: TCP
      port: 5432

  # Разрешаю подам обращаться к Kubernetes API 
  - to:
    - ipBlock:
        cidr: 10.96.0.0/16
    ports:
    - protocol: TCP
      port: 443

  # Доступ к API 2: Разрешаю трафик на реальный IP мастер-ноды, в связи с очень веселым поведением kube-proxy (Он перенаправляет к 10.96.0.1. туда....)
  - to:
    - ipBlock:
        cidr: 192.168.163.134/32
    ports:
    - protocol: TCP
      port: 6443
    - protocol: TCP
      port: 443
 

  # Разрешаю PostgreSQL подам общаются друг с другом (egress)
  - to:
    - podSelector:
        matchLabels:
          cnpg.io/cluster: postgres-ha
    ports:
    - protocol: TCP
      port: 5432
    - protocol: TCP
      port: 8000
